...

  @override
  ConsumerState<NewNotebookSheet> createState() => _NewNotebookSheetState();
}

class _NewNotebookSheetState extends ConsumerState<NewNotebookSheet> {
  final _title = TextEditingController(text: 'Untitled Notebook');
  int _cover = 0;
  PaperTemplate _template = PaperTemplate.lined;
  PaperColor _paper = PaperColor.white;
  PageSizePreset _size = PageSizePreset.a4;
  PageOrientation _orientation = PageOrientation.portrait;
  bool _marginRule = false;
...
